src/algoritmia/AlgoritmiaParser.py
# Generated from C:/Users/Yosselin/Documents/DDD/Algoritmia.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AlgoritmiaParser ( Parser ):

    grammarFileName = "Algoritmia.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'|:'", "':|'", "'['", "']'", "'('", "')'", 
                     "'{'", "'}'", "'<?>'", "'<w>'", "'(:)'", "'<:>'", "'<-'", 
                     "'<<'", "'8<'", "'#'", "'if'", "'else'", "'while'", 
                     "'='", "'/='", "'<='", "'>='", "'<'", "'>'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "READ", "WRITE", "PLAY", "PLAY_ALT", 
                      "ASSIGN", "APPEND", "LIST_REMOVE", "LEN", "IF", "ELSE", 
                      "WHILE", "EQ", "NEQ", "LE", "GE", "LT", "GT", "PLUS", 
                      "MINUS", "MULT", "DIV", "MOD", "STRING", "INT", "ID_MAYUS", 
                      "ID_MINUSCULA", "WS", "NL", "COMMENT" ]

    RULE_programa = 0
    RULE_procedimiento = 1
    RULE_bloq_inicio = 2
    RULE_bloq_fin = 3
    RULE_parametros = 4
    RULE_instrucciones = 5
    RULE_instruccion = 6
    RULE_asignacion = 7
    RULE_lectura = 8
    RULE_escritura = 9
    RULE_escritura_item = 10
    RULE_reproduccion = 11
    RULE_llamada_proc = 12
    RULE_addlista = 13
    RULE_poplista = 14
    RULE_condicional = 15
    RULE_while_stmt = 16
    RULE_expr = 17
    RULE_comparacion = 18
    RULE_aritmetica = 19
    RULE_termino = 20
    RULE_factor = 21
    RULE_lista_literal = 22
    RULE_elements_list = 23

    ruleNames =  [ "programa", "procedimiento", "bloq_inicio", "bloq_fin", 
                   "parametros", "instrucciones", "instruccion", "asignacion", 
                   "lectura", "escritura", "escritura_item", "reproduccion", 
                   "llamada_proc", "addlista", "poplista", "condicional", 
                   "while_stmt", "expr", "comparacion", "aritmetica", "termino", 
                   "factor", "lista_literal", "elements_list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    READ=9
    WRITE=10
    PLAY=11
    PLAY_ALT=12
    ASSIGN=13
    APPEND=14
    LIST_REMOVE=15
    LEN=16
    IF=17
    ELSE=18
    WHILE=19
    EQ=20
    NEQ=21
    LE=22
    GE=23
    LT=24
    GT=25
    PLUS=26
    MINUS=27
    MULT=28
    DIV=29
    MOD=30
    STRING=31
    INT=32
    ID_MAYUS=33
    ID_MINUSCULA=34
    WS=35
    NL=36
    COMMENT=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AlgoritmiaParser.EOF, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoritmiaParser.NL)
            else:
                return self.getToken(AlgoritmiaParser.NL, i)

        def procedimiento(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.ProcedimientoContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.ProcedimientoContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = AlgoritmiaParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==36:
                self.state = 48
                self.match(AlgoritmiaParser.NL)
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 55 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 54
                self.procedimiento()
                self.state = 57 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==33):
                    break

            self.state = 59
            self.match(AlgoritmiaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedimientoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_MAYUS(self):
            return self.getToken(AlgoritmiaParser.ID_MAYUS, 0)

        def bloq_inicio(self):
            return self.getTypedRuleContext(AlgoritmiaParser.Bloq_inicioContext,0)


        def instrucciones(self):
            return self.getTypedRuleContext(AlgoritmiaParser.InstruccionesContext,0)


        def bloq_fin(self):
            return self.getTypedRuleContext(AlgoritmiaParser.Bloq_finContext,0)


        def parametros(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ParametrosContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoritmiaParser.NL)
            else:
                return self.getToken(AlgoritmiaParser.NL, i)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_procedimiento

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedimiento" ):
                listener.enterProcedimiento(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedimiento" ):
                listener.exitProcedimiento(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedimiento" ):
                return visitor.visitProcedimiento(self)
            else:
                return visitor.visitChildren(self)




    def procedimiento(self):

        localctx = AlgoritmiaParser.ProcedimientoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_procedimiento)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(AlgoritmiaParser.ID_MAYUS)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 62
                self.parametros()


            self.state = 65
            self.bloq_inicio()
            self.state = 66
            self.instrucciones()
            self.state = 67
            self.bloq_fin()
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==36:
                self.state = 68
                self.match(AlgoritmiaParser.NL)
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bloq_inicioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoritmiaParser.NL)
            else:
                return self.getToken(AlgoritmiaParser.NL, i)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_bloq_inicio

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloq_inicio" ):
                listener.enterBloq_inicio(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloq_inicio" ):
                listener.exitBloq_inicio(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloq_inicio" ):
                return visitor.visitBloq_inicio(self)
            else:
                return visitor.visitChildren(self)




    def bloq_inicio(self):

        localctx = AlgoritmiaParser.Bloq_inicioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bloq_inicio)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(AlgoritmiaParser.T__0)
            self.state = 78
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 75
                    self.match(AlgoritmiaParser.NL) 
                self.state = 80
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bloq_finContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_bloq_fin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloq_fin" ):
                listener.enterBloq_fin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloq_fin" ):
                listener.exitBloq_fin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloq_fin" ):
                return visitor.visitBloq_fin(self)
            else:
                return visitor.visitChildren(self)




    def bloq_fin(self):

        localctx = AlgoritmiaParser.Bloq_finContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bloq_fin)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(AlgoritmiaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_MINUSCULA(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoritmiaParser.ID_MINUSCULA)
            else:
                return self.getToken(AlgoritmiaParser.ID_MINUSCULA, i)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametros" ):
                return visitor.visitParametros(self)
            else:
                return visitor.visitChildren(self)




    def parametros(self):

        localctx = AlgoritmiaParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 83
                self.match(AlgoritmiaParser.ID_MINUSCULA)
                self.state = 86 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==34):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.InstruccionContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoritmiaParser.NL)
            else:
                return self.getToken(AlgoritmiaParser.NL, i)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_instrucciones

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrucciones" ):
                listener.enterInstrucciones(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrucciones" ):
                listener.exitInstrucciones(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstrucciones" ):
                return visitor.visitInstrucciones(self)
            else:
                return visitor.visitChildren(self)




    def instrucciones(self):

        localctx = AlgoritmiaParser.InstruccionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_instrucciones)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 88
                    self.instruccion()
                    self.state = 90 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 89
                            self.match(AlgoritmiaParser.NL)

                        else:
                            raise NoViableAltException(self)
                        self.state = 92 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
             
                self.state = 98
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 25770499584) != 0):
                self.state = 99
                self.instruccion()


            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==36:
                self.state = 102
                self.match(AlgoritmiaParser.NL)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(AlgoritmiaParser.AsignacionContext,0)


        def lectura(self):
            return self.getTypedRuleContext(AlgoritmiaParser.LecturaContext,0)


        def escritura(self):
            return self.getTypedRuleContext(AlgoritmiaParser.EscrituraContext,0)


        def condicional(self):
            return self.getTypedRuleContext(AlgoritmiaParser.CondicionalContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(AlgoritmiaParser.While_stmtContext,0)


        def llamada_proc(self):
            return self.getTypedRuleContext(AlgoritmiaParser.Llamada_procContext,0)


        def reproduccion(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ReproduccionContext,0)


        def addlista(self):
            return self.getTypedRuleContext(AlgoritmiaParser.AddlistaContext,0)


        def poplista(self):
            return self.getTypedRuleContext(AlgoritmiaParser.PoplistaContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = AlgoritmiaParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_instruccion)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.asignacion()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.lectura()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.escritura()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.condicional()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 112
                self.while_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 113
                self.llamada_proc()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 114
                self.reproduccion()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 115
                self.addlista()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 116
                self.poplista()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_MINUSCULA(self):
            return self.getToken(AlgoritmiaParser.ID_MINUSCULA, 0)

        def ASSIGN(self):
            return self.getToken(AlgoritmiaParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = AlgoritmiaParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(AlgoritmiaParser.ID_MINUSCULA)
            self.state = 120
            self.match(AlgoritmiaParser.ASSIGN)
            self.state = 121
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LecturaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(AlgoritmiaParser.READ, 0)

        def ID_MINUSCULA(self):
            return self.getToken(AlgoritmiaParser.ID_MINUSCULA, 0)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_lectura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLectura" ):
                listener.enterLectura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLectura" ):
                listener.exitLectura(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLectura" ):
                return visitor.visitLectura(self)
            else:
                return visitor.visitChildren(self)




    def lectura(self):

        localctx = AlgoritmiaParser.LecturaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_lectura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(AlgoritmiaParser.READ)
            self.state = 124
            self.match(AlgoritmiaParser.ID_MINUSCULA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EscrituraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(AlgoritmiaParser.WRITE, 0)

        def escritura_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.Escritura_itemContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.Escritura_itemContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_escritura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscritura" ):
                listener.enterEscritura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscritura" ):
                listener.exitEscritura(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEscritura" ):
                return visitor.visitEscritura(self)
            else:
                return visitor.visitChildren(self)




    def escritura(self):

        localctx = AlgoritmiaParser.EscrituraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_escritura)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(AlgoritmiaParser.WRITE)
            self.state = 128 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 127
                self.escritura_item()
                self.state = 130 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 32346538144) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Escritura_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(AlgoritmiaParser.STRING, 0)

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_escritura_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscritura_item" ):
                listener.enterEscritura_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscritura_item" ):
                listener.exitEscritura_item(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEscritura_item" ):
                return visitor.visitEscritura_item(self)
            else:
                return visitor.visitChildren(self)




    def escritura_item(self):

        localctx = AlgoritmiaParser.Escritura_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_escritura_item)
        try:
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.match(AlgoritmiaParser.STRING)
                pass
            elif token in [5, 7, 16, 27, 32, 33, 34]:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.expr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReproduccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def PLAY(self):
            return self.getToken(AlgoritmiaParser.PLAY, 0)

        def PLAY_ALT(self):
            return self.getToken(AlgoritmiaParser.PLAY_ALT, 0)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_reproduccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReproduccion" ):
                listener.enterReproduccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReproduccion" ):
                listener.exitReproduccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReproduccion" ):
                return visitor.visitReproduccion(self)
            else:
                return visitor.visitChildren(self)




    def reproduccion(self):

        localctx = AlgoritmiaParser.ReproduccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_reproduccion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            _la = self._input.LA(1)
            if not(_la==11 or _la==12):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 137
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Llamada_procContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_MAYUS(self):
            return self.getToken(AlgoritmiaParser.ID_MAYUS, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.ExprContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_llamada_proc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLlamada_proc" ):
                listener.enterLlamada_proc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLlamada_proc" ):
                listener.exitLlamada_proc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLlamada_proc" ):
                return visitor.visitLlamada_proc(self)
            else:
                return visitor.visitChildren(self)




    def llamada_proc(self):

        localctx = AlgoritmiaParser.Llamada_procContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_llamada_proc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(AlgoritmiaParser.ID_MAYUS)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 30199054496) != 0):
                self.state = 140
                self.expr()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddlistaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_MINUSCULA(self):
            return self.getToken(AlgoritmiaParser.ID_MINUSCULA, 0)

        def APPEND(self):
            return self.getToken(AlgoritmiaParser.APPEND, 0)

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_addlista

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddlista" ):
                listener.enterAddlista(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddlista" ):
                listener.exitAddlista(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddlista" ):
                return visitor.visitAddlista(self)
            else:
                return visitor.visitChildren(self)




    def addlista(self):

        localctx = AlgoritmiaParser.AddlistaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_addlista)
        try:
            self.enterOuterAlt(localctx, 1)
